# b2exp

./: .editorconfig  .gitignore  README.md  about.txt  b2exp.S  config.h.in  meson.build
bench/: about.txt  interface.c
include/: about.txt  b2exp.h  bench.h  lut.h  meson.build
include/asm/: about.txt  names.h
include/b2exp/: about.txt  b2exp.h
src/: about.txt  b2exp.c  lut.c  meson.build
src/asm/: about.txt  darwin.x86_64.S
test/: about.txt
